force-app/main/default/objects/Opportunity_External_Team__c/Opportunity_External_Team__c.object-meta.xml
<CustomObject>
    <description>Custom object to track client and external contacts for a prospective engagement.</description>
    <label>Opportunity Contact</label>
    <nameField>
        <displayFormat>OET-{000000}</displayFormat>
        <label>External Team #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>