force-app/main/default/objects/Opportunity_External_Team__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Contacts</relationshipLabel>
    <relationshipName>Opportunity_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>