force-app/main/default/objects/Opportunity_External_Team__c/fields/Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>Activity_Level__c</fullName>
    <label>Activity Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actively Involved</fullName>
            </value>
            <value>
                <fullName>Somewhat Involved</fullName>
            </value>
            <value>
                <fullName>Not Involved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>