force-app/main/default/objects/Opportunity_External_Team__c/fields/Bill_To_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Billing_Country__c</fullName>
    <formula>Contact__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Billing Country</label>
    <type>Text</type>
</CustomField>