force-app/main/default/objects/Opportunity_External_Team__c/fields/Bill_To_Company__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Company__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>Bill To Company</label>
    <type>Text</type>
</CustomField>