force-app/main/default/objects/Opportunity_External_Team__c/fields/Bill_To_Company_Location__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Company_Location__c</fullName>
    <formula>Account__r.Location__c</formula>
    <label>Bill To Company Location</label>
    <type>Text</type>
</CustomField>