force-app/main/default/objects/Opportunity_External_Team__c/fields/Bill_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Id__c</fullName>
    <formula>Contact__r.AccountId</formula>
    <label>Bill To Id</label>
    <type>Text</type>
</CustomField>