force-app/main/default/objects/Opportunity_External_Team__c/fields/Billing_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Notes__c</fullName>
    <defaultValue>&quot;Please confirm this is the correct contact to receive billing for this engagement.&quot;</defaultValue>
    <description>Please confirm this is the correct contact to receive billing for this engagement.</description>
    <inlineHelpText>Please confirm this is the correct contact to receive billing for this engagement.</inlineHelpText>
    <label>Billing Contact Notes</label>
    <type>TextArea</type>
</CustomField>