force-app/main/default/objects/Opportunity_External_Team__c/fields/Conversion_Check__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Check__c</fullName>
    <description>check if role is selected</description>
    <formula>TEXT( Opportunity__r.Line_of_Business__c ) == &apos;FVA&apos; &amp;&amp; 
(TEXT( Opportunity__r.Job_Type__c ) == &apos;Board Advisory Services (BAS)&apos; || TEXT( Opportunity__r.Job_Type__c ) == &apos;FMV Transaction Based Opinion&apos; || TEXT( Opportunity__r.Job_Type__c ) == &apos;Fairness&apos; || TEXT( Opportunity__r.Job_Type__c ) == &apos;Solvency&apos; || Opportunity__r.Job_Code__c == &apos;5521&apos;) &amp;&amp;
(TEXT( Role__c ) == &apos;Attorney to Adverse Party Board/Special Committee&apos; || 
TEXT( Role__c ) == &apos;Attorney to Adverse Party Company&apos; || 
TEXT( Role__c ) == &apos;Attorney to Board/Special Committee&apos; || 
TEXT( Role__c ) == &apos;Attorney (Acquirer)&apos; || 
TEXT( Role__c ) == &apos;Attorney (Target)&apos; || 
TEXT( Role__c ) == &apos;Attorney Advising other Transaction Party&apos; || 
TEXT( Role__c ) == &apos;Banker Advising Acquirer&apos; || 
TEXT( Role__c ) == &apos;Banker Advising Target&apos; || 
TEXT( Role__c ) == &apos;Banker Advising other Transaction Party&apos; || 
TEXT( Role__c ) == &apos;Attorney to Houlihan Lokey&apos; || 
TEXT( Role__c ) == &apos;Board of Directors&apos; || 
TEXT( Role__c ) == &apos;Board of Directors - non-management&apos; || 
TEXT( Role__c ) == &apos;Adverse Party&apos; || 
TEXT( Role__c ) == &apos;CFO of Company&apos; || 
TEXT( Role__c ) == &apos;CEO of Company&apos; || 
TEXT( Role__c ) == &apos;Company Management&apos; || 
TEXT( Role__c ) == &apos;Financial Advisor to Company/Debtor&apos; || 
TEXT( Role__c ) == &apos;Financial Advisor to Potential Buyer&apos; || 
TEXT( Role__c ) == &apos;Majority Owner&apos; || 
TEXT( Role__c ) == &apos;Management Contact&apos; || 
TEXT( Role__c ) == &apos;Member of Board of Directors&apos; || 
TEXT( Role__c ) == &apos;Independent Director&apos; ||
TEXT( Role__c ) == &apos;Other&apos;)</formula>
    <inlineHelpText>FVA Transaction Opinion Only</inlineHelpText>
    <label>Conversion Check</label>
    <type>Checkbox</type>
</CustomField>