force-app/main/default/objects/Opportunity_External_Team__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName, &quot;&quot;, &apos;_parent&apos;) &amp; 
HYPERLINK(&quot;/&quot; &amp; Id, Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName ,&apos;_parent&apos;)</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>