force-app/main/default/objects/Opportunity_External_Team__c/fields/OET_UNIQUE__c.field-meta.xml
<CustomField>
    <fullName>OET_UNIQUE__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>OET UNIQUE</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>