force-app/main/default/objects/Opportunity_External_Team__c/fields/Opportunity_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Client_Name__c</fullName>
    <formula>Opportunity__r.Client__r.Name</formula>
    <label>Opportunity Client Name</label>
    <type>Text</type>
</CustomField>