force-app/main/default/objects/Opportunity_External_Team__c/fields/Report_Contact_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Contact_Fields__c</fullName>
    <formula>Contact__r.Contact_Full_Name__c + &apos;|01|&apos; + Contact__r.FirstName + &apos;|02|&apos; + Contact__r.MiddleName + &apos;|03|&apos; + Contact__r.LastName + &apos;|04|&apos; + Contact__r.Title + &apos;|05|&apos; + Contact__r.Email + &apos;|06|&apos; + Contact__r.Phone + &apos;|07|&apos; + Contact__r.Fax + &apos;|08|&apos; + Contact__r.MobilePhone + &apos;|09|&apos; + Contact__r.Alternate_Email__c + &apos;|10|&apos; + Contact__r.AssistantName + &apos;|11|&apos; + Contact__r.Assistant_Email__c + &apos;|12|&apos; + Contact__r.AssistantPhone + &apos;|13|&apos; + Contact__r.Account.Name + &apos;|14|&apos; + Contact__r.Account.BillingStreet + &apos;|15|&apos; + Contact__r.Account.BillingCity + &apos;|16|&apos; + Contact__r.Account.BillingState + &apos;|17|&apos; + Contact__r.Account.BillingPostalCode + &apos;|18|&apos; + Contact__r.Account.BillingCountry + &apos;|19|&apos; + Contact__r.HomePhone + &apos;|20|&apos; + Contact__r.OtherPhone + &apos;|21|&apos; + Contact__r.Account.Phone + &apos;|22|&apos; + Contact__r.Account.Fax + &apos;|23|&apos; + Contact__r.Account.Website + &apos;|24|&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Contact Fields</label>
    <type>Text</type>
</CustomField>