force-app/main/default/objects/Opportunity_External_Team__c/recordTypes/CF.recordType-meta.xml
<RecordType>
    <fullName>CF</fullName>
    <active>true</active>
    <label>CF</label>
</RecordType>