force-app/main/default/objects/Opportunity_External_Team__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Used to allow selection of all picklist values</description>
    <label>General</label>
</RecordType>