force-app/main/default/objects/Opportunity_External_Team__c/validationRules/HL_PrimaryContactEmailTitleCheckOpp.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_PrimaryContactEmailTitleCheckOpp</fullName>
    <active>true</active>
    <description>Related to DMND0023358:- 
To check if Primary contact has Title and Email</description>
    <errorConditionFormula>IF(ISNEW() , 
	((Primary__c || Billing_Contact__c)  &amp;&amp; ( ISBLANK(Contact__r.Email) || ISBLANK( Contact__r.Title ) )), 
	(((Primary__c &amp;&amp; (PRIORVALUE(Primary__c ) = false))  ||  (Billing_Contact__c &amp;&amp; (PRIORVALUE(Billing_Contact__c ) = false)) ) &amp;&amp; ( ISBLANK(Contact__r.Email) || ISBLANK( Contact__r.Title ) ))
)</errorConditionFormula>
    <errorMessage>Please enter the title and email of the primary/billing contact.</errorMessage>
</ValidationRule>